# learn_languages

./: .gitignore
julia/: README.md
julia/01_basics/: input_output.jl  operators.jl  variables.jl
julia/02_control_flow/: conditionals.jl  exceptions.jl  loops.jl
julia/03_data_structures/: arrays.jl  dictionaries.jl  tuples_sets.jl
julia/04_functions/: basic_functions.jl  multiple_dispatch.jl
julia/05_modules_packages/: modules.jl
julia/06_advanced_topics/: metaprogramming.jl
julia/07_practical_examples/: data_analysis.jl
julia/exercises/: basic_exercises.jl
ocaml/: COMPREHENSIVE_COVERAGE.md  README.md  WORKING_STATUS.md  dune-project
ocaml/src/: advanced_data_structures.ml  advanced_topics.ml  basics.ml  data_structures.ml  dune  memoization_monads.ml  modules.ml  runtime_compiler.ml
rust/: exercises  exercises.rs
rust/borrow_checker_examples/: Cargo.toml
rust/borrow_checker_examples/src/: main.rs
zig/: 01_feature_highlights.zig  02_optional_types.zig  03_error_handling.zig  04_compile_time_generics.zig  05_c_integration.zig  basic_syntax.zig  exercises.zig  hello_world.zig
